--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <title>Rosie</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+  <title>Rosie</title>
 </head>
 <body>
   <header>
-
+    <div class="row no-gutters">
+      <a href="index.html" class="col-md-4 logo">
+      
+      </a>
+      <div class="col-md-8">
+        <div class="row no-gutters bg-color-name-title">
+          <div class="col heading">
+            <h1 class="name">Rosie Odenkirk</h1>
+            <h2 class="title">Full Stack Developer</h2>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col">
+            <ul id="nav" class="list-inline menu-container">
+              <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+                <a href="#"><span>Home</span></a>
+              </li>
+              <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
+                <a href="#"><span>Resume</span></a>
+              </li>
+              <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item">
+                <a href="#"><span>Contact</span></a>
+              </li>
+              <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item">
+                <a href="#"><span>Download</span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <section>
@@ -16,7 +48,7 @@
   </section>
 
   <footer>
-    
+
   </footer>
 </body>
 </html>
