--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <title>Rosie</title>
 </head>
@@ -24,17 +25,17 @@
         <div class="row no-gutters">
           <div class="col">
             <ul id="nav" class="list-inline menu-container">
-              <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
-                <a href="#"><span>Home</span></a>
+              <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
               </li>
-              <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
-                <a href="#"><span>Resume</span></a>
+              <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
               </li>
-              <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item">
-                <a href="#"><span>Contact</span></a>
+              <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Contact</span></a>
               </li>
-              <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item">
-                <a href="#"><span>Download</span></a>
+              <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
               </li>
             </ul>
           </div>
@@ -43,12 +44,79 @@
     </div>
   </header>
 
-  <section>
-
+  <section class="container-fluid">
+    <div class="row row-table">
+      <div class="col-md-8 bg-color-three-reasons section-column">
+        <div class="row">
+          <div class="col">
+            <h3 class="section-heading uppercase">About Me</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <footer>
-
+  <footer class="container-fluid">
+    <div id="footer-details" class="row">
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">About</h5>
+        <p class="inline-block">
+          Full Stack Web Developer. Skilled in everything from HTML to Heroku.
+          The capacity for structural and design thinking.
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">Download</h5>
+        <p class="inline-block">
+          Need a printable version of my CV? Download it here.
+          <a href="#" target="_blank" class="cv-pdf">
+            <i class="fa fa-download" aria-hidden="true"></i>
+            <span class="sr-only">Download link.</span>
+          </a>
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">Social</h5>
+        <ul class="list-inline social-links">
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+              <span class="sr-only">LinkedIn</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-pinterest" aria-hidden="true"></i>
+              <span class="sr-only">Pinterest</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-youtube" aria-hidden="true"></i>
+              <span class="sr-only">Youtube</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
